# project-injection

./: .env.example  .gitignore  README.md  docker-compose.project.dev.yml  docker-compose.project.release.yml
assets/: .$system-architecture(release).drawio.bkp  system-architecture(dev).drawio  system-architecture(release).drawio
config-injection/: .dockerignore  .env.celery  .env.dev  .env.release  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celery.service  gitmessage.txt  pyproject.toml
nginx/: Dockerfile
nginx/config/: nginx.conf
proj-injection/: .gitignore  README.md  entrypoint.sh
proj-injection/apps/accounts/: __init__.py  admin.py  apps.py  urls.py
proj-injection/apps/accounts/migrations/: 0001_initial.py  __init__.py
proj-injection/apps/accounts/models/: __init__.py  accounts.py
proj-injection/apps/accounts/serializers/: __init__.py  accounts.py  tokens.py
proj-injection/apps/accounts/tasks/: __init__.py
proj-injection/apps/accounts/views/: __init__.py  account_machine_history.py  accounts.py
proj-injection/apps/machines/: __init__.py  admin.py  apps.py  urls.py
proj-injection/apps/machines/migrations/: 0001_initial.py  0002_alter_injectionmoldingmachines_status.py  0003_alter_injectionmoldingmachines_status_and_more.py  0004_machineshistory_result_and_more.py  0005_alter_injectionmoldingmachines_status_and_more.py  0006_alter_injectionmoldingmachines_status_and_more.py  __init__.py
proj-injection/apps/machines/models/: __init__.py  machine_history.py  machines.py
proj-injection/apps/machines/serializers/: __init__.py  machine_history.py  machines.py
proj-injection/apps/machines/tasks/: __init__.py  task_machine_operation_history.py  task_operation_machine.py
proj-injection/apps/machines/views/: __init__.py  machine_detail.py  machine_history.py  machine_list.py  machine_operation.py
proj-injection/base_modules/exception_handler/: __init__.py  exception_handler.py
proj-injection/base_modules/middleware_handler/: __init__.py  middleware_handler.py
proj-injection/base_modules/response_handler/: __init__.py  response_handler.py
proj-injection/base_modules/swagger_schema_view/: __init__.py  set_fail_response_schema.py  swagger_schema_view.py
proj-injection/config/: __init__.py  celery.py  urls.py
proj-injection/config/settings/: __init__.py  applications.py  authentication.py  celery.py  databases.py  i18n.py  rest_framework.py  set_jwt.py  set_logging.py  static.py  swagger.py
proj-injection/defines/: __init__.py  data_status.py  operation_commands.py  response_status.py
